# narrative

./: .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml
.github/workflows/: checks.yml  ci.yml
app/: cache.py  logger.py  main.py
app/analysis/: base.py  content.py  media.py  network.py  participants.py  reactions.py  timeline.py
app/api/: asgi.py  deps.py  server.py
app/api/routes/: analysis.py  chats.py  day.py  messages.py  range_detail.py  search.py  semantic_search.py  stats.py
app/data/stopwords/: en.txt  he.txt
app/db/: connection.py  contacts.py  loaders.py  row_types.py
app/db/queries/: calls.py  chats.py  day.py  messages.py  range.py  reactions.py  search.py  stats.py
app/models/: chat.py  config.py  message.py  sender.py
app/search/: chunker.py  embedder.py  indexer.py  state.py  vector_store.py
app/semantic_search/: chunker.py  embedder.py  indexer.py  params.py  reranker.py  session.py  state.py  vector_store.py
app/ui/: app_factory.py
app/ui/callbacks/: charts.py  filters.py  routing.py
app/ui/layout/: shell.py
app/ui/layout/pages/: content.py  media.py  overview.py  participants.py  timeline.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: CalendarHeatmap.tsx  ChatLayout.tsx  DatetimeInput.tsx  DayDetail.tsx  ExportButton.tsx  GlobalSearch.tsx  Header.tsx  Heatmap.tsx  MessageFeed.tsx  NavBar.tsx  Sidebar.tsx  Spinner.tsx
frontend/src/components/messages/: ActivityCard.tsx  ChatsFilterCard.tsx  MessagesCard.tsx  SearchableChipFilter.tsx  SenderFilterCard.tsx
frontend/src/context/: ThemeContext.tsx
frontend/src/pages/: ContentPage.tsx  GlobalMessagesPage.tsx  GlobalNetworkPage.tsx  HomePage.tsx  MediaPage.tsx  MessagesPage.tsx  NetworkPage.tsx  OverviewPage.tsx  ParticipantsPage.tsx  RangeDetailPage.tsx  TimelinePage.tsx
frontend/src/utils/: datetime.ts
scripts/: fetch_db.sh  generate_mock_db.py
test/: conftest.py  test_nothing.py
test/analysis/: test_content.py  test_participants.py  test_timeline.py
test/db/: test_loaders.py
