# Project

[project]

name = "whatsapp-analyzer"
version = "0.1.0"
description = "A tool for analyzing WhatsApp chat exports."
authors = [
    { name = "Asaf Kali", email = "asaf.kali@mail.huji.ac.il" },
]
requires-python = ">=3.14"
readme = "README.md"

# Dependencies

dependencies = [
    "pydantic ~= 2.12",
]

[dependency-groups]
test = [
    "pytest ~= 9.0",
    "coverage[toml] >= 7.12",
]
lint = [
    "ruff >= 0.14",
    "mypy >= 1.19",
]
dev = [
    "pre-commit >= 2.17",
]

# UV

[tool.uv]
package = false

[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

# Test

[tool.pytest.ini_options]
pythonpath = "app"
addopts = "-s --disable-pytest-warnings"

[tool.coverage.run]
omit = [ "test/*" ]
source = [ "." ]

# Lint

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [ "ALL" ]
exclude = [
    "local/",
]
ignore = [
    "COM812", # Trailing comma conflict
    "D100",   # Missing docstring in public module
    "D103",   # Missing docstring in public function
    "D104",   # Missing docstring in public class
    "D203",   # No blank lines allowed after function docstring
    "D213",   # No blank lines allowed after class docstring
]

[tool.mypy]
strict = true
exclude = [
    "local/",
]
