# Project

[project]

name = "whatsapp-analyzer"
version = "0.1.0"
description = "A tool for analyzing WhatsApp chat exports."
authors = [
    { name = "Asaf Kali", email = "asaf.kali@mail.huji.ac.il" },
]
requires-python = ">=3.14"
readme = "README.md"

# Dependencies

dependencies = [
    "emoji ~= 2.12",
    "fastapi~=0.115",
    "langdetect ~= 1.0",
    "pandas ~= 2.2",
    "pillow >= 10",
    "pydantic ~= 2.12",
    "uvicorn[standard]~=0.34",
    "wordcloud ~= 1.9",
]

[dependency-groups]
lint = [
    "ruff >= 0.14",
    "mypy >= 1.19",
    "pandas-stubs ~= 2.2",
]
dev = [
    "pre-commit >= 2.17",
]

# UV

[tool.uv]
package = false

[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"

# Test

# Lint

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [ "ALL" ]
exclude = [
    "local/",
]
ignore = [
    "ANN401",  # Dynamically typed expressions (Any) allowed for complex pandas/dash types
    "PD010",   # .unstack is appropriate for pivot-style operations on grouped series
    "N806",    # Constants in functions should be ALL_CAPS (common convention)
    "COM812",  # Trailing comma conflict with formatter
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D104",    # Missing docstring in public package
    "D105",    # Missing docstring in magic method
    "D107",    # Missing docstring in __init__
    "D203",    # Blank line required before class docstring (conflicts with D211)
    "D213",    # Multi-line docstring summary at second line (conflicts with D212)
    "EM101",   # Exception must not use a string literal
    "EM102",   # Exception must not use an f-string literal
    "G004",    # Logging statement uses f-string
    "ISC001",  # Implicit string concatenation (conflicts with formatter)
    "TC001",   # Move application import into TYPE_CHECKING block
    "TC002",   # Move third-party import into TYPE_CHECKING block
    "TC003",   # Move standard library import into TYPE_CHECKING block
    "TRY003",  # Avoid specifying long messages outside the exception class
    "FBT001",  # Boolean-typed positional argument — required by FastAPI query param convention
    "FBT002",  # Boolean default positional argument — required by FastAPI query param convention
    "PLR0913", # Too many arguments — FastAPI route handlers naturally have many query params
]

[tool.ruff.lint.per-file-ignores]

[tool.mypy]
strict = true
ignore_missing_imports = true
# The @analysis registry uses a TypeVar-bound decorator pattern that is
# semantically correct but mypy cannot verify through nested closures.
disallow_untyped_decorators = false
exclude = [
    "local/",
]
